# androidGPUtest

./: CMakeLists.txt  README.md  settings.gradle
android_main/: android_main.cpp  android_main.h
app/: build.gradle
app/src/androidTest/java/com/jcd/gbench/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jcd/gbench/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
triangle/: build.gradle
triangle/cpp/: CMakeLists.txt  triangle.cpp
triangle/src/androidTest/java/com/jcd/triangle/: ExampleInstrumentedTest.java
triangle/src/main/: AndroidManifest.xml
triangle/src/test/java/com/jcd/triangle/: ExampleUnitTest.java
utils/: CMakeLists.txt  utils.h
vulkan_wrapper/: CMakeLists.txt  vulkan_utils.cpp  vulkan_utils.h
